--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
     "no-console": "off",
     "react/react-in-jsx-scope": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "arrow-body-style":"off",
+    "import/prefer-default-export":"off"
   }
 }
